--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="photoBg" style="background-image:url('assets/sanjith.jpeg');"></div>
           <div class="photoShade"></div>
 
-          <img class="photoMain" src="assets/sanjith.jpeg" alt="Sanjith" />
+          <img class="photoMain" src="assets/Sanjith.jpeg" alt="Sanjith" />
 
           <!-- FLOATING EMOJIS (20) -->
           <div class="floatLayer" aria-hidden="true">
@@ -802,3 +802,4 @@
 
 </body>
 </html>
+
