--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       <!-- RIGHT: IMAGE CARD -->
       <article class="card card--image">
         <div class="photoWrap">
-          <div class="photoBg" style="background-image:url('assets/sanjith.jpeg');"></div>
+          <div class="photoBg" style="background-image:url('assets/zzzz.jpeg');"></div>
           <div class="photoShade"></div>
 
-          <img class="photoMain" src="assets/Sanjith.jpeg" alt="Sanjith" />
+          <img class="photoMain" src="assets/zzzz.jpeg" alt="Sanjith" />
 
           <!-- FLOATING EMOJIS (20) -->
           <div class="floatLayer" aria-hidden="true">
@@ -791,5 +791,6 @@
 
 </body>
 </html>
+
 
 
